Added constructor for ApplicationContext.java